--- a/Style_Registration_Form.css
+++ b/Style_Registration_Form.css
@@ -1,7 +1,8 @@
 ﻿body {
     width: 100%;
     height: 100vh;
-    background-color:#1B1B32;
+    background-image: url(https://images.pexels.com/photos/2653362/pexels-photo-2653362.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+    background-size: cover;
     color: #F5F6F7;
     margin: 0;
     font-family: Tahoma;
